# DPT-Board-OS

./: .config  .gitignore  README  README.md
feeds/luci.tmp/: .packageinfo
feeds/luci.tmp/info/: .packageinfo-applications_luci-app-olsr
feeds/management.tmp/: .packageinfo
feeds/management.tmp/info/: .packageinfo-libmicroxml  .packageinfo-libyang
feeds/packages.tmp/: .packageinfo
feeds/packages.tmp/info/: .files-packageinfo-13286  .files-packageinfo-20470  .files-packageinfo.mk  .packageinfo-admin_zabbix  .packageinfo-lang_lua-cjson  .packageinfo-lang_luai2c  .packageinfo-lang_luasec  .packageinfo-lang_php5  .packageinfo-lang_python  .packageinfo-lang_ruby  .packageinfo-libs_gnutls  .packageinfo-libs_ldns  .packageinfo-libs_libpng  .packageinfo-libs_libradcli  .packageinfo-libs_libsoup  .packageinfo-libs_libtasn1  .packageinfo-libs_libuv  .packageinfo-libs_openldap  .packageinfo-libs_p11-kit  .packageinfo-libs_pcre  .packageinfo-libs_postgresql  .packageinfo-libs_unixodbc  .packageinfo-multimedia_ffmpeg  .packageinfo-net_bind  .packageinfo-net_cshark  .packageinfo-net_ddns-scripts  .packageinfo-net_dmapd  .packageinfo-net_fwknop  (+23 more)
feeds/routing.tmp/: .packageinfo
feeds/telephony.tmp/: .packageinfo
files/etc/: banner  dptechnics.db  hosts  inittab  rc.local  sysctl.conf  sysupgrade.conf
files/www/: LICENSE  bluecherry-settings.html  button-control.html  chatclient.html  firmware-settings.html  graphic-control.html  index.html  menu.html  robot-control.html  wifi-settings.html
package/utils/dpt-watchdog/src/: CMakeLists.txt  main.c
scripts/: download.pl
(+115 files in other folders)
